# astML

./: .gitignore  .gitmodules  README.md  flake.nix  meson.build  meson.options
grammar/java/: Java20Parser.g4
grammar/java/dest/: Java20Lexer.cpp  Java20Lexer.h  Java20Parser.cpp  Java20Parser.h  Java20ParserBaseVisitor.cpp  Java20ParserBaseVisitor.h  Java20ParserVisitor.cpp  Java20ParserVisitor.h
include/: rapidxml
include/astML/: app.hh  astML.hh  typescript_lexer_base.hh  typescript_parser_base.hh  util.hh
source/: astml_doc.cc  main.cc  runner.cc
source/app/: app.cc
source/lexing/: typescript.g4  typescript_lexer_base.cc
source/parsing/: typescript.g4  typescript_parser_base.cc
